# HR

./: .gitignore  README.md  Technical Overview.md  Training.md  pyproject.toml  run.py
backend/: .env  demo_shap_improved.py  main.py  requirements.txt
backend/ml/: optimal_threshold.joblib  predictor.py  preprocessor.joblib  train_pipeline.py  xgb_model.joblib
backend/models/: schemas.py
backend/services/: ai_service.py
backend/static/: index.html
